ext/css/settings.css
/* ... */
.dictionary-details-table {
    display: table;
    width: 100%;
}
.dictionary-details-entry {
    display: table-row;
}
.dictionary-details-entry+.dictionary-details-entry>* {
    padding-top: 0.25em;
}
.dictionary-details-entry-label {
    display: table-cell;
    font-weight: bold;
    white-space: nowrap;
    padding-right: 0.5em;
}
.dictionary-details-entry-info {
    display: table-cell;
    white-space: pre-line;
}
.dictionary-counts {
    width: 100%;
    box-sizing: border-box;
    font-size: inherit;
    max-height: 10em;
    line-height: 1.25;
    font-family: 'Courier New', Courier, monospace;
    white-space: pre;
    overflow: auto;
}

#dictionary-alias-input {
    width: 100%;
}

#dictionary-move-up>span.icon-button-inner,
#dictionary-move-down>span.icon-button-inner {
    width: 26px;
}

/* Secondary search dictionary settings */
.secondary-search-dictionary-list {
    margin-top: 0.5em;
}
.secondary-search-dictionary-item {
    padding: 0.375em 0;
}


/* Dictionary Import */
#dictionary-import-url-text {
    width: 100%;
    height: 4em;
    white-space: nowrap;
    resize: none;
}

#dictionary-import-url-button {
    flex: auto;
}

#dictionary-drop-file-zone {
    transition: background-color var(--animation-duration) ease-in-out, border var(--animation-duration) ease-in-out;
    border: 2px dashed var(--dictionary-import-border-color);
    border-radius: 5px;
    flex: auto;
    min-height: 20em;
    user-select: none;
    text-align: center;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
}

#dictionary-drop-file-zone:hover {
    background-color: var(--dictionary-import-hover-background-color);
    border: 2px dashed var(--accent-color);
}

#dictionary-drop-file-zone.drag-over {
    border: 2px solid var(--accent-color);
    background-color: var(--dictionary-import-border-color-hover);
}

#dictionary-drag-drop-text {
    pointer-events: none;
}

#dictionary-drag-drop-text>.icon {
    display: block;
    margin: auto;
    background-color: var(--button-default-icon-color);
    width: var(--outline-item-icon-size);
    height: var(--outline-item-icon-size);
}

#dictionary-drag-drop-text h1,
#dictionary-drag-drop-text h5 {
    margin: 0;
    padding: 0;
    font-weight: normal;
    border-bottom: none;
}

#dictionary-import-modal .modal-body:has(#dictionary-drop-file-zone) {
    display: flex;
}


/* Generic layouts */
.margin-above {
    margin-top: 0.85em;
}
.margin-left {
    margin-left: 0.85em;
}

.horizontal-flex {
    display: flex;
    flex-flow: row wrap;
    margin-left: -0.375em;
    align-items: center;
    align-content: flex-start;
    justify-content: flex-start;
}
.horizontal-flex.horizontal-flex-nowrap {
    flex-wrap: nowrap;
    margin-left: 0;
}
.horizontal-flex>* {
    margin-left: 0.375em;
}
.horizontal-flex.horizontal-flex-nowrap>*:first-child {
    margin-left: 0;
}
.horizontal-flex-fill {
    flex-grow: 1;
}

.generic-list {
    counter-reset: generic-list-index;
}
.generic-list-index-prefix::after {
    counter-increment: generic-list-index;
    content: counter(generic-list-index);
}
.generic-list:not(:empty)~.generic-list-empty-indicator {
    display: none;
}

.flex-row-nowrap {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    width: 100%;
}
.flex-row-nowrap.right {
    justify-content: flex-end;
}
.flex-row-wrap {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
}
.flex-margin-left {
    margin-left: 0.5em;
}

.flex-column-nowrap {
    display: flex;
    flex-flow: column nowrap;
    align-items: flex-start;
    width: 100%;
}
.flex-column-nowrap-spaced>* {
    margin-top: 0.25em;
}

.flex-label {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
}
.flex-label>span {
    margin-left: 0.375em;
}
.flex-label.no-wrap>span {
    white-space: nowrap;
}

.no-wrap {
    white-space: nowrap;
}
.overflow-wrap {
    word-break: break-all;
}

.input-prevention-option-list {
    margin-top: 0.375em;
    display: flex;
    flex-flow: column nowrap;
    align-items: flex-start;
    width: 100%;
    padding-left: 0.5em;
    box-sizing: border-box;
}
.input-prevention-option-list-item {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    width: 100%;
}
.input-prevention-option-list-item>:first-child {
    flex: 0 0 auto;
}
.input-prevention-option-list-item>:not(:first-child) {
    margin-left: 0.375em;
    flex: 1 1 auto;
}

.legal-npm {
    flex-grow: 1;
    height: 250px;
    padding: 0.5em 1em;
    border: 0;
}

/* Environment-specific display */
:root[data-browser=unknown] [data-show-for-browser],
:root[data-browser=unknown] [data-hide-for-browser],
:root[data-browser=edge] [data-show-for-browser]:not([data-show-for-browser~=edge]),
:root[data-browser=edge-legacy] [data-show-for-browser]:not([data-show-for-browser~=edge-legacy]),
:root[data-browser=chrome] [data-show-for-browser]:not([data-show-for-browser~=chrome]),
:root[data-browser=safari] [data-show-for-browser]:not([data-show-for-browser~=safari]),
:root[data-browser=firefox] [data-show-for-browser]:not([data-show-for-browser~=firefox]),
:root[data-browser=firefox-mobile] [data-show-for-browser]:not([data-show-for-browser~=firefox-mobile]),
:root[data-browser=edge] [data-hide-for-browser~=edge],
:root[data-browser=edge-legacy] [data-hide-for-browser~=edge-legacy],
:root[data-browser=chrome] [data-hide-for-browser~=chrome],
:root[data-browser=safari] [data-hide-for-browser~=safari],
:root[data-browser=firefox] [data-hide-for-browser~=firefox],
:root[data-browser=firefox-mobile] [data-hide-for-browser~=firefox-mobile] {
    display: none;
}
/* ... */

